--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>test.GraphicsMain</mainClass>
+                            <mainClass>BrickDestroy.View.GraphicsMain</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
