--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,13 @@
     <groupId>com.BrickDestroy</groupId>
     <artifactId>Brick_Destroy</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.release>17</maven.compiler.release>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
@@ -17,18 +19,18 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.4.2</version>
+            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>16</version>
+            <version>17.0.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>16</version>
+            <version>17.0.0.1</version>
         </dependency>
     </dependencies>
     <build>
@@ -39,10 +41,10 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>BrickDestroy.JavaFX_View.BrickDestroyMain</mainClass>
-                        </manifest>
+                            <manifest>
+                                <addClasspath>true</addClasspath>
+                                <mainClass>BrickDestroy.JavaFX_View.BrickDestroyMain</mainClass>
+                            </manifest>
                     </archive>
                 </configuration>
             </plugin>
@@ -59,19 +61,20 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>BrickDestroyMain</mainClass>
+                    <mainClass>BrickDestroy.JavaFX_View.BrickDestroyMain</mainClass>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
+                <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>BrickDestroyMain</mainClass>
+                            <mainClass>BrickDestroy.JavaFX_View.BrickDestroyMain</mainClass>
                         </manifest>
                     </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
                 </configuration>
             </plugin>
         </plugins>
